bizinikiwi/pezframe/support/test/tests/pezpallet_ui/genesis_wrong_name.stderr
error: Invalid pezpallet::genesis_build, expected impl<..> GenesisBuild<..> for GenesisConfig<..>
  --> tests/pezpallet_ui/genesis_wrong_name.rs:36:2
   |
36 |     impl Foo {}
   |     ^^^^
